--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <i class="fa fa-check-circle text-secondary mr-2"></i> Soporte financiero experto 24/7
                 </p>
                 <!-- 核心WhatsApp引导按钮（大尺寸，醒目） -->
-                <a href="https://wa.me/341234567890" target="_blank" class="btn-whatsapp w-full md:w-auto justify-center">
+                <a href="https://wa.me/852 9 561 1357" target="_blank" class="btn-whatsapp w-full md:w-auto justify-center">
                     <i class="fa fa-whatsapp text-2xl"></i>
                     Añade Nosotros en WhatsApp para Empezar GRATIS
                 </a>
@@ -160,7 +160,7 @@
                             <span>Oportunidades de inversión a corto, medio y largo plazo</span>
                         </li>
                     </ul>
-                    <a href="https://wa.me/341234567890" target="_blank" class="btn-whatsapp w-full md:w-auto justify-center">
+                    <a href="https://wa.me/852 9 561 1357" target="_blank" class="btn-whatsapp w-full md:w-auto justify-center">
                         <i class="fa fa-whatsapp"></i>
                         Obtén Tu Informe de Mercado Exclusivo
                     </a>
@@ -225,7 +225,7 @@
             <p class="text-lg md:text-xl max-w-3xl mx-auto opacity-90">
                 No pierdas más tiempo, el mercado bursátil español espera por ti. Añade nos en WhatsApp hoy mismo y obtén acceso a nuestro servicio GRATIS durante 7 días.
             </p>
-            <a href="https://wa.me/341234567890" target="_blank" class="btn-whatsapp mx-auto">
+            <a href="https://wa.me/852 9 561 1357" target="_blank" class="btn-whatsapp mx-auto">
                 <i class="fa fa-whatsapp text-2xl"></i>
                 Añade Nosotros en WhatsApp - Empezar Ahora
             </a>
@@ -258,7 +258,7 @@
                     <a href="#" class="hover:text-white transition-colors"><i class="fa fa-facebook"></i></a>
                     <a href="#" class="hover:text-white transition-colors"><i class="fa fa-twitter"></i></a>
                     <a href="#" class="hover:text-white transition-colors"><i class="fa fa-linkedin"></i></a>
-                    <a href="https://wa.me/341234567890" target="_blank" class="hover:text-[#25D366] transition-colors"><i class="fa fa-whatsapp"></i></a>
+                    <a href="https://wa.me/852 9 561 1357" target="_blank" class="hover:text-[#25D366] transition-colors"><i class="fa fa-whatsapp"></i></a>
                 </div>
                 <div class="text-sm">
                     &copy; 2026 AccionesES Inversiones. Todos los derechos reservados. <br>
@@ -269,7 +269,7 @@
     </footer>
 
     <!-- 悬浮WhatsApp按钮（移动端/桌面端始终可见） -->
-    <a href="https://wa.me/341234567890" target="_blank" class="fixed bottom-8 right-8 btn-whatsapp p-4 rounded-full shadow-2xl z-50">
+    <a href="https://wa.me/852 9 561 1357" target="_blank" class="fixed bottom-8 right-8 btn-whatsapp p-4 rounded-full shadow-2xl z-50">
         <i class="fa fa-whatsapp text-2xl"></i>
     </a>
 
