Update WhatsApp links and button text

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 content-visibility: auto;
             }
             .btn-whatsapp {
-                @apply bg-[#25D366] hover:bg-[#128C7E] text-white font-bold py-4 px-8 rounded-full shadow-lg hover:shadow-xl transition-all duration-300 flex items-center gap-3 text-lg md:text-xl;
+                @apply bg-[#25D366] hover:bg-[#128C7E] text-white font-bold py-4 px-8 rounded-full shadow-lg hover:shadow-xl transition-all duration-300 flex items-center gap-3 text-lg md:text-xl justify-center;
             }
             .section-padding {
                 @apply py-16 md:py-24;
@@ -54,7 +54,7 @@
                 <a href="#mercado" class="hover:text-primary transition-colors">Mercado Español</a>
                 <a href="#como-empezar" class="hover:text-primary transition-colors">Cómo Empezar</a>
                 <a href="#contacto" class="btn-whatsapp py-2 px-6 text-base">
-                    <i class="fa fa-whatsapp"></i> Contáctanos Ahora
+                    <i class="fa fa-whatsapp"></i> Añádenos en WhatsApp
                 </a>
             </div>
             <button class="md:hidden text-dark text-2xl">
@@ -81,9 +81,9 @@
                     <i class="fa fa-check-circle text-secondary mr-2"></i> Soporte financiero experto 24/7
                 </p>
                 <!-- 核心WhatsApp引导按钮（大尺寸，醒目） -->
-                <a href="https://wa.me/852 9 561 1357" target="_blank" class="btn-whatsapp w-full md:w-auto justify-center">
+                <a href="https://wa.me/341234567890" target="_blank" class="btn-whatsapp w-full md:w-auto">
                     <i class="fa fa-whatsapp text-2xl"></i>
-                    Añade Nosotros en WhatsApp para Empezar GRATIS
+                    Añádenos en WhatsApp
                 </a>
                 <p class="text-sm opacity-80 text-center mt-4">
                     *Sin compromiso, prueba nuestro servicio durante 7 días gratis
@@ -160,9 +160,9 @@
                             <span>Oportunidades de inversión a corto, medio y largo plazo</span>
                         </li>
                     </ul>
-                    <a href="https://wa.me/852 9 561 1357" target="_blank" class="btn-whatsapp w-full md:w-auto justify-center">
+                    <a href="https://wa.me/341234567890" target="_blank" class="btn-whatsapp w-full md:w-auto">
                         <i class="fa fa-whatsapp"></i>
-                        Obtén Tu Informe de Mercado Exclusivo
+                        Añádenos en WhatsApp
                     </a>
                 </div>
             </div>
@@ -225,9 +225,9 @@
             <p class="text-lg md:text-xl max-w-3xl mx-auto opacity-90">
                 No pierdas más tiempo, el mercado bursátil español espera por ti. Añade nos en WhatsApp hoy mismo y obtén acceso a nuestro servicio GRATIS durante 7 días.
             </p>
-            <a href="https://wa.me/852 9 561 1357" target="_blank" class="btn-whatsapp mx-auto">
+            <a href="https://wa.me/341234567890" target="_blank" class="btn-whatsapp mx-auto">
                 <i class="fa fa-whatsapp text-2xl"></i>
-                Añade Nosotros en WhatsApp - Empezar Ahora
+                Añádenos en WhatsApp
             </a>
             <div class="flex justify-center gap-8 mt-12">
                 <div class="flex flex-col items-center">
@@ -258,7 +258,7 @@
                     <a href="#" class="hover:text-white transition-colors"><i class="fa fa-facebook"></i></a>
                     <a href="#" class="hover:text-white transition-colors"><i class="fa fa-twitter"></i></a>
                     <a href="#" class="hover:text-white transition-colors"><i class="fa fa-linkedin"></i></a>
-                    <a href="https://wa.me/852 9 561 1357" target="_blank" class="hover:text-[#25D366] transition-colors"><i class="fa fa-whatsapp"></i></a>
+                    <a href="https://wa.me/341234567890" target="_blank" class="hover:text-[#25D366] transition-colors"><i class="fa fa-whatsapp"></i></a>
                 </div>
                 <div class="text-sm">
                     &copy; 2026 AccionesES Inversiones. Todos los derechos reservados. <br>
@@ -267,11 +267,6 @@
             </div>
         </div>
     </footer>
-
-    <!-- 悬浮WhatsApp按钮（移动端/桌面端始终可见） -->
-    <a href="https://wa.me/852 9 561 1357" target="_blank" class="fixed bottom-8 right-8 btn-whatsapp p-4 rounded-full shadow-2xl z-50">
-        <i class="fa fa-whatsapp text-2xl"></i>
-    </a>
 
     <script>
         // 简单的平滑滚动效果
