--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <i class="fa fa-check-circle text-secondary mr-2"></i> Soporte financiero experto 24/7
                 </p>
                 <!-- 核心WhatsApp引导按钮（大尺寸，醒目） -->
-                <a href="https://wa.me/85295611357" target="_blank" class="btn-whatsapp w-full md:w-auto">
+                <a href="https://wa.me/85295611357?text=Me gustaría saber sobre acciones de alta calidad con potencial de crecimiento. ¿Podrías recomendarme alguna?"  target="_blank" class="btn-whatsapp w-full md:w-auto">
                     <i class="fa fa-whatsapp text-2xl"></i>
                     Añádenos en WhatsApp
                 </a>
