Update WhatsApp links with custom message

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                             <span>Oportunidades de inversión a corto, medio y largo plazo</span>
                         </li>
                     </ul>
-                    <a href="https://wa.me/85295611357" target="_blank" class="btn-whatsapp w-full md:w-auto">
+                    <a href="https://wa.me/85295611357?text=Me gustaría saber sobre acciones de alta calidad con potencial de crecimiento. ¿Podrías recomendarme alguna?"  target="_blank" class="btn-whatsapp w-full md:w-auto">
                         <i class="fa fa-whatsapp"></i>
                         Añádenos en WhatsApp
                     </a>
@@ -225,7 +225,7 @@
             <p class="text-lg md:text-xl max-w-3xl mx-auto opacity-90">
                 No pierdas más tiempo, el mercado bursátil español espera por ti. Añade nos en WhatsApp hoy mismo y obtén acceso a nuestro servicio GRATIS durante 7 días.
             </p>
-            <a href="https://wa.me/85295611357" target="_blank" class="btn-whatsapp mx-auto">
+            <a href="https://wa.me/85295611357?text=Me gustaría saber sobre acciones de alta calidad con potencial de crecimiento. ¿Podrías recomendarme alguna?"  target="_blank" class="btn-whatsapp mx-auto">
                 <i class="fa fa-whatsapp text-2xl"></i>
                 Añádenos en WhatsApp
             </a>
@@ -258,7 +258,7 @@
                     <a href="#" class="hover:text-white transition-colors"><i class="fa fa-facebook"></i></a>
                     <a href="#" class="hover:text-white transition-colors"><i class="fa fa-twitter"></i></a>
                     <a href="#" class="hover:text-white transition-colors"><i class="fa fa-linkedin"></i></a>
-                    <a href="https://wa.me/85295611357" target="_blank" class="hover:text-[#25D366] transition-colors"><i class="fa fa-whatsapp"></i></a>
+                    <a href="https://wa.me/85295611357?text=Me gustaría saber sobre acciones de alta calidad con potencial de crecimiento. ¿Podrías recomendarme alguna?"  target="_blank" class="hover:text-[#25D366] transition-colors"><i class="fa fa-whatsapp"></i></a>
                 </div>
                 <div class="text-sm">
                     &copy; 2026 AccionesES Inversiones. Todos los derechos reservados. <br>
