Update Meta Pixel Code and comments in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inversión en Acciones Españolas - Maximiza Tus Ganancias Hoy</title>
-  <!-- Meta Pixel Code -->
+    <!-- 替换后的Meta Pixel Code（新ID：1641508960539560） -->
 <script>
 !function(f,b,e,v,n,t,s)
 {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -57,7 +57,7 @@ src="https://www.facebook.com/tr?id=1641508960539560&ev=PageView&noscript=1"
             }
         }
     </style>
-</>
+</head>
 <body class="bg-light text-dark antialiased">
     <!-- 导航栏（无中文“联系”按钮，布局简洁） -->
     <header class="sticky top-0 bg-white/90 backdrop-blur-sm shadow-sm z-50">
@@ -307,7 +307,7 @@ src="https://www.facebook.com/tr?id=1641508960539560&ev=PageView&noscript=1"
             }
         });
 
-        // 新增：绑定fbq('track', 'Contact')到WhatsApp核心转化按钮
+        // 绑定fbq('track', 'Contact')到WhatsApp核心转化按钮
         document.getElementById('whatsappContactBtn').addEventListener('click', function() {
             // 触发Facebook Pixel Contact事件追踪
             fbq('track', 'Contact');
